Finished home and team pages

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,9 +25,12 @@
   </head>
 
   <body class="<%= page_classes %>">
-
-    <%= partial "navbar" %>
-    <%= yield %>
-
+    <div class="site">
+      <%= partial "navbar" %>
+      <div class="site-content">
+        <%= yield %>
+      </div>
+      <%= partial "footer" %>
+    </div>
   </body>
 </html>
