--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,9 +2,149 @@
 title: Le Wagon Middleman boilerplate
 ---
 
-<div class="welcome text-center padded">
-  <h1>Welcome to Middleman</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('images/background.jpg');">
+  <div class="banner-content">
+    <h1>Some Stuff</h1>
+    <p>Very cool stuff, useful and smart</p>
+    <form class="form-inline">
+      <input type="text" class="form-control input-lg" id="exampleInputName2" placeholder="Check-in">
+
+      <input type="email" class="form-control input-lg" id="exampleInputEmail2" placeholder="Check-out">
+
+      <select class="form-control input-lg">
+        <option>1 person</option>
+        <option>2 persons</option>
+        <option>3 persons</option>
+      </select>
+
+      <button type="submit" class="btn btn-primary btn-lg">Search</button>
+    </form>
+  </div>
 </div>
+
+<!-- Your features code -->
+<div class="padded">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="item text-center">
+          <%= image_tag "globe.png" %>
+          <h1>Discover the world</h1>
+          <p>The earth is your new home.</p>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="item text-center">
+          <%= image_tag "dollar.png" %>
+          <h1>Pay online</h1>
+          <p>No cash issues anymore.</p>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="item text-center">
+          <%= image_tag "beer.png" %>
+          <h1>Meet people</h1>
+          <p>Discover new culture and lifestyle.</p>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="item text-center">
+          <%= image_tag "heart.png" %>
+          <h1>Share and love</h1>
+          <p>Join a community you will love.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Your cards code -->
+<div class="wrapper-grey padded">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>Your next trip</h2>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-paris.jpg');">
+          <div class="card-category">Paris</div>
+          <div class="card-description">
+            <h1>Anne's home</h1>
+            <p>Charming room with patio</p>
+          </div>
+          <%= image_tag "anne.jpg", class: "card-user avatar" %>
+          <%= link_to "Anne", "#", class: "card-link" %>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-brussels.jpeg');">
+          <div class="card-category">Brussels</div>
+          <div class="card-description">
+            <h1>Romain's home</h1>
+            <p>Lovely house</p>
+          </div>
+          <%= image_tag "romain.jpg", class: "card-user avatar" %>
+          <%= link_to "Romain", "#", class: "card-link" %>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-london.jpeg');">
+          <div class="card-category">London</div>
+          <div class="card-description">
+            <h1>Seb's home</h1>
+            <p>Nice flat in Piccadilly</p>
+          </div>
+          <%= image_tag "seb.jpg", class: "card-user avatar" %>
+          <%= link_to "Seb", "#", class: "card-link" %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Your newsletter code -->
+<div class="text-center padded">
+  <h2>Get news from us</h2>
+  <p>Leave us your mail and get news from us</p>
+
+  <form action="/" class="form-inline">
+    <input type="text" class="form-control" placeholder="bob@gmail.com">
+    <button type="submit" class="btn btn-primary">Suscribe</button>
+  </form>
+</div>
+<!-- Your map code -->
+<div id="map" style="width: 100%; height: 400px;"></div>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+<script type="text/javascript">
+var myLatlng = new google.maps.LatLng(48.8655909, 2.378983);
+
+var myOptions = {
+  zoom: 16,
+  center: myLatlng,
+  scrollwheel: false,
+  mapTypeId: google.maps.MapTypeId.ROADMAP,
+  styles: [] // TODO: replace [] by array from https://snazzymaps.com/
+};
+
+var map = new google.maps.Map(document.getElementById('map'), myOptions);
+var marker = new google.maps.Marker({
+  position: myLatlng,
+  map: map,
+  title: "You are here!"
+});
+</script>
+
+<!-- Your footer code -->
+
+<!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
