--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -13,3 +13,13 @@
 @import "components/*";
 @import "pages/*";
 @import "vendor/*";
+
+.site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.site-content {
+  flex: 1;
+}
