Add CSS for colors and fonts and over-ride Bootstrap theme

--- a/source/stylesheets/layout/_navbar.css.scss
+++ b/source/stylesheets/layout/_navbar.css.scss
@@ -54,15 +54,15 @@
   padding: 0 20px;
   border-radius: 20em;
   line-height: 40px;
-  background-color: #D23333;
+  background-color: $fuchsia-pink;
   color: white;
   font-size: 14px;
-  border: 2px solid #D23333;
+  border: 2px solid $fuchsia-pink;
 }
 .navbar-wagon-button:hover {
   color: white;
-  background: #D23333;
-  border-color: #ac2626;
+  background: $fuchsia-pink;
+  border-color: #af2692;
 }
 
 /* Navbar search form */
