--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -31,13 +31,13 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
-}
-.card-description h1 {
-  font-size: 24px;
-}
-.card-description p {
-  font-size: 13px;
+  h1 {
+    font-size: 24px;
   }
+  p {
+    font-size: 13px;
+  }
+}
 .card-link {
   position: absolute;
   top: 0;
