--- a/source/stylesheets/config/_bootstrap_variables.css.scss
+++ b/source/stylesheets/config/_bootstrap_variables.css.scss
@@ -11,7 +11,7 @@ $line-height-base:        $base-height;
 $headings-font-family:    $header-font;
 
 // Semantic color scheme
-$brand-primary:   $blue;
+$brand-primary:   $fuchsia-pink;
 $brand-success:   $green;
 $brand-info:      $yellow;
 $brand-danger:    $red;
@@ -21,3 +21,5 @@ $brand-warning:   $orange;
 $border-radius-base:  2px;
 $border-radius-large: 2px;
 $border-radius-small: 2px;
+
+$input-border-focus: $fuchsia-pink;
